Bug 883466 - Fix build failure in GGC caused by jsobjinlines.h reorganization; r=njn